# delegate

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SKILL.md  install.sh  pyproject.toml
Reviews/: GLM-5.1-review.md
install/: delegate.md
src/delegate/: brief.py  circuit.py  cli.py  config.default.toml  config.py  fanout.py  globs.py  logger.py  orchestrator.py  preflight.py  progress.py  ratelimit.py  worktree.py
src/delegate/providers/: __init__.py  base.py  gemini.py  kimi.py  opencode.py  openrouter.py
src/delegate/schemas/: brief.schema.json  error.schema.json  log.schema.json
tests/: test_brief.py  test_circuit.py  test_cli.py  test_config.py  test_config_default.py  test_fanout.py  test_fanout_serialize.py  test_globs.py  test_logger.py  test_orchestrator.py  test_orchestrator_ratelimit.py  test_preflight.py  test_progress.py  test_provider_base.py  test_provider_gemini.py  test_provider_kimi.py  test_provider_opencode.py  test_provider_openrouter.py  test_provider_registry.py  test_ratelimit.py  test_schemas.py  test_signals.py  test_smoke_kimi.py  test_smoke_live.py  test_worktree_categorize.py  test_worktree_merge.py  test_worktree_spawn.py
