[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delegate"
version = "0.1.0"
description = "Dispatch tasks to non-Claude providers"
requires-python = ">=3.13"
dependencies = [
  "jsonschema>=4.22",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-mock>=3.14",
]

[project.scripts]
delegate = "delegate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
delegate = ["schemas/*.json", "config.default.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
